--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+</head>
+<body>
+    <nav>
+        <header class="head">
+            <h3 class="tx1">Log in to get started</h3> 
+            <img src="logo.png" alt="LOGO" class="img1">
+            <input type="text" placeholder="user" class="user">      
+            <input type="number" placeholder="pin" class="pin">
+            <button class="arrow">&rarr;</button>
+        </header>
+    </nav> 
+    <div class="main"> 
+        <div class="inter1">
+            <p class="tx2">Current balance</p>
+            <p class="date_time1">As of <span>28/02/2024</span>, <span>15:74</span></p>
+        </div>
+        <div class="inter2">
+            <p class="amt1">25 952,59 €</p>
+        </div>
+    </div>
+    <div class="main1">
+        <div class="tb1">
+            <p class="money">Transfer money</p>
+            <input type="text" class="branch typing">
+            <input type="text" class="amount typing">
+            <p><span class="special transfer">Transfer to</span><span class="special amt">Amount</span></p>
+        </div>
+        <div class="tb2">
+            <p class="money">Request loan</p>
+            <input type="number" class="typing loan">
+            <p class="special">Amount</p>
+        </div>
+        <div class="tb3">
+            <p class="money">Close account</p>
+            <input type="text" class="typing users">
+            <input type="text" class="typing pins">
+            <p><span class="special transfer useres">Conform user</span><span class="special amt pinss">Pin</span></p> 
+        </div>
+    </div>
+    <footer class="last">
+        <p>
+            IN <span>27 035,20 €</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OUT <span>1082,61 €</span>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INSERT <span>323,46 €</span>
+        </p>
+        <button class="sorting">&#8595;Sort</button>
+    </footer>
+    <script src='indexjs.js'></script>
+</body>
+</html>
