--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="tb1">
             <p class="money">Transfer money</p>
             <input type="text" class="branch typing">
-            <input type="text" class="amount typing">
+            <input type="number" class="amount typing">
             <p><span class="special transfer">Transfer to</span><span class="special amt">Amount</span></p>
         </div>
         <div class="tb2">
@@ -41,16 +41,19 @@
         <div class="tb3">
             <p class="money">Close account</p>
             <input type="text" class="typing users">
-            <input type="text" class="typing pins">
+            <input type="number" class="typing pins">
             <p><span class="special transfer useres">Conform user</span><span class="special amt pinss">Pin</span></p> 
         </div>
     </div>
+    <div class="main2">
+
+    </div>
     <footer class="last">
         <p>
-            IN <span>27 035,20 €</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OUT <span>1082,61 €</span>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INSERT <span>323,46 €</span>
+            IN &nbsp;<span class="amt-style1">27 035,20 €</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OUT &nbsp;<span class="amt-style2">1082,61 €</span>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INSERT &nbsp;<span class="amt-style3">323,46 €</span>
         </p>
-        <button class="sorting">&#8595;Sort</button>
+        <button class="sorting">&#8595;&nbsp;&nbsp;SORT</button>
     </footer>
     <script src='indexjs.js'></script>
 </body>
