--- a/index.html
+++ b/index.html
@@ -46,8 +46,17 @@
         </div>
     </div>
     <div class="main2">
-
-    </div>
+        <div class="row-1-st">
+          <div class="row-1">2 deposit</div>
+          <div class="row-2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3 days ago</div>
+          <div class="row-3">4 000€</div>
+        </div>
+        <div class="row-2-nd">
+          <div class="row1">1 withdrawal</div>
+          <div class="row2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;24/01/2037</div>
+          <div class="row3">-378€</div>
+        </div>
+      </div>
     <footer class="last">
         <p>
             IN &nbsp;<span class="amt-style1">27 035,20 €</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OUT &nbsp;<span class="amt-style2">1082,61 €</span>
