--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     </div>
     <div class="main1">
         <div class="tb1">
-            <p class="money">Transfer money</p>
+            <p class="money">Transfer money <button class="operation">&rarr;</button></p>
             <input type="text" class="branch typing">
             <input type="number" class="amount typing">
             <p><span class="special transfer">Transfer to</span><span class="special amt">Amount</span></p>
         </div>
         <div class="tb2">
-            <p class="money">Request loan</p>
+            <p class="money">Request loan <button class="operation">&rarr;</button></p>
             <input type="number" class="typing loan">
             <p class="special">Amount</p>
         </div>
         <div class="tb3">
-            <p class="money">Close account</p>
+            <p class="money">Close account <button class="operation">&rarr;</button></p>
             <input type="text" class="typing users">
             <input type="number" class="typing pins">
             <p><span class="special transfer useres">Conform user</span><span class="special amt pinss">Pin</span></p> 
