--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p class="date_time1">As of <span>28/02/2024</span>, <span>15:74</span></p>
             </div>
             <div class="inter2">
-                <p class="amt1">25 952,59 €</p>
+                <p class="amt1">0000 <span>€</span></p>
             </div>
         </div>
         <div class="main1">
