todays project improvement 6/2/24

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           </div>
         <footer class="last">
             <p>
-                IN &nbsp;<span class="amt-style1">27 035,20 €</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OUT &nbsp;<span class="amt-style2">1082,61 €</span>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INSERT &nbsp;<span class="amt-style3">323,46 €</span>
+                IN &nbsp;<span class="amt-style1">0000€</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OUT &nbsp;<span class="amt-style2">0000€</span>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INSERT &nbsp;<span class="amt-style3">0000€</span>
             </p>
             <button class="sorting">&#8595;&nbsp;&nbsp;SORT</button>
         </footer>
