--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <nav>
-        <header class="head">
+        <form class="head">
             <h3 class="tx1">Log in to get started</h3> 
             <img src="logo.png" alt="LOGO" class="img1">
             <input type="text" placeholder="user" class="user">      
             <input type="number" placeholder="pin" class="pin">
             <button class="arrow">&rarr;</button>
-        </header>
+        </form>
     </nav>
     <div class="container">
         <div class="main"> 
