--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="main"> 
             <div class="inter1">
                 <p class="tx2">Current balance</p>
-                <p class="date_time1">As of <span>28/02/2024</span>, <span>15:74</span></p>
+                <p class="date_time1">As of <span class="date">28/02/2024</span>, <span class="time">15:74</span></p>
             </div>
             <div class="inter2">
                 <p class="amt1">0000 <span>€</span></p>
