login and logout

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INSERT &nbsp;<span class="amt-style3">0000</span>
             </p>
             <button class="sorting">&#8595;&nbsp;&nbsp;SORT</button>
+            <p class="last-last">you will be logged out in : <span>02:00</span></p>
         </footer>
     </div> 
     <script src='indexjs.js'></script>
