Title of the web page changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Bank Management</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
@@ -64,7 +64,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INSERT &nbsp;<span class="amt-style3">0000</span>
             </p>
             <button class="sorting">&#8595;&nbsp;&nbsp;SORT</button>
-            <p class="last-last">you will be logged out in : 0<span class="last-last-last">2:00</span></p>
+            <p class="last-last">you will be logged out in : <span class="last-last-last">02:00</span></p>
         </footer>
     </div> 
     <script src='indexjs.js'></script>
